--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
         <swagger.version>2.7.0</swagger.version>
         <aliyun.oss.version>2.8.3</aliyun.oss.version>
         <jodatime.version>2.10.1</jodatime.version>
-        <poi.version>3.17</poi.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <commons-io.version>2.6</commons-io.version>
         <httpclient.version>4.5.1</httpclient.version>
@@ -111,17 +110,8 @@
             </dependency>
 
             <!--xls-->
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi</artifactId>
-                <version>${poi.version}</version>
-            </dependency>
-            <!--xlsx-->
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi-ooxml</artifactId>
-                <version>${poi.version}</version>
-            </dependency>
+
+
 
             <!--文件上传-->
             <dependency>
@@ -205,6 +195,10 @@
                 <artifactId>canal.client</artifactId>
                 <version>${canal.client.version}</version>
             </dependency>
+
+
+            <!--xls-->
+
 
         </dependencies>
 
