--- a/common/service_base/pom.xml
+++ b/common/service_base/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>edu.zc</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>common_utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
