--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.5</version>
+        <version>2.5.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.zc</groupId>
@@ -96,11 +96,11 @@
             </dependency>
 
             <!--aliyunOSS-->
-            <dependency>
-                <groupId>com.aliyun.oss</groupId>
-                <artifactId>aliyun-sdk-oss</artifactId>
-                <version>${aliyun.oss.version}</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>com.aliyun.oss</groupId>-->
+            <!--                <artifactId>aliyun-sdk-oss</artifactId>-->
+            <!--                <version>${aliyun.oss.version}</version>-->
+            <!--            </dependency>-->
 
             <!--日期时间工具-->
             <dependency>
