feat: learning easyExcel 's usage,uploading file and inserting a database

--- a/service/service_report/pom.xml
+++ b/service/service_report/pom.xml
@@ -33,5 +33,12 @@
     <!--            <version>3.17</version>-->
     <!--        </dependency>-->
     <!--    </dependencies>-->
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>${velocity.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
