--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <canal.client.version>1.1.0</canal.client.version>
         <docker.image.prefix>zx</docker.image.prefix>
         <cloud-alibaba.version>0.2.2.RELEASE</cloud-alibaba.version>
+        <poi.version>3.17</poi.version>
     </properties>
 
 
@@ -76,11 +77,7 @@
             </dependency>
 
             <!-- velocity 模板引擎, Mybatis Plus 代码生成器需要 -->
-            <dependency>
-                <groupId>org.apache.velocity</groupId>
-                <artifactId>velocity-engine-core</artifactId>
-                <version>${velocity.version}</version>
-            </dependency>
+
 
             <!--swagger-->
             <dependency>
